# ProxmoxMCP

./: .gitignore  AUGMENT_SETUP.md  ClineInstall.md  Dockerfile  FORK_SUMMARY.md  MCP_FEATURES.md  MCP_VM_Renaming_Guide.md  README.md  README_AUGMENT.md  augment_config_example.json  create_netmaker_direct.py  install-netmaker.sh  install.sh  install_netmaker.sh  netmaker-oneclick-install.sh  netmaker_quick_install.sh  pyproject.toml  requirements-dev.in  requirements.in  setup.py  simple_netmaker_test.py  standalone_mcp_server.py  start_standalone.sh  test_clone_netmaker.py
Graphics/: ProxmoxMCP.psd
config/: config.example.json
proxmox-config/: config.example.json
scripts/: deploy-n8n.sh  install-database.sh  install-freeipa.sh  install-gitlab.sh  install-jumpserver.sh  install-kubernetes-master.sh  install-kubernetes-worker.sh  install-monitoring.sh  install-netbird.sh
src/proxmox_mcp/: __init__.py  server.py
src/proxmox_mcp/config/: loader.py  models.py
src/proxmox_mcp/core/: logging.py  proxmox.py
src/proxmox_mcp/formatting/: __init__.py  colors.py  components.py  formatters.py  templates.py  theme.py
src/proxmox_mcp/tools/: __init__.py  base.py  cloudinit.py  cluster.py  definitions.py  network.py  node.py  storage.py  vm.py  vm_console.py
src/proxmox_mcp/tools/console/: __init__.py  manager.py
src/proxmox_mcp/utils/: __init__.py  auth.py  logging.py
tests/: __init__.py  test_server.py  test_vm_console.py
